clean up and apply design pattern - part 1

--- a/SmppServer/appsettings.json
+++ b/SmppServer/appsettings.json
@@ -9,5 +9,45 @@
   "SmppServerConfiguration": {
     "SessionUsername": "test",
     "SessionPassword": "test"
+  },
+  "SslConfiguration": {
+    "Enabled": true,
+    "Port": 2776,
+    "CertificatePath": "/app/certificates/smpp-server.pfx",
+    "CertificatePassword": "${SSL_CERTIFICATE_PASSWORD}",
+    "CertificateStoreLocation": "LocalMachine",
+    "CertificateStoreName": "My",
+    "CertificateSubject": "",
+    "SupportedProtocols": 15360,
+    "RequireClientCertificate": false,
+    "CheckCertificateRevocation": true,
+    "AllowSelfSignedCertificates": false,
+    "TrustedCACertificates": [
+      "/app/certificates/ca-cert.pem",
+      "/app/certificates/intermediate-ca.pem"
+    ],
+    "HandshakeTimeout": "00:00:30",
+    "EnableSessionResumption": true,
+    "SessionCacheSize": 1000,
+    "SessionTimeout": "01:00:00",
+    "AllowedCipherSuites": [
+      "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384",
+      "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+      "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
+      "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256"
+    ],
+    "EnableOcspStapling": false,
+    "ValidationOptions": {
+      "ValidateChain": true,
+      "ValidateNotExpired": true,
+      "ValidateNotNotYetValid": true,
+      "ValidateName": true,
+      "ExpectedNames": [
+        "smpp-server.yourdomain.com",
+        "*.yourdomain.com"
+      ],
+      "AllowNameMismatch": false,
+      "UseCustomValidation": false
+    }
   }
 }
