--- a/SmppServer/appsettings.json
+++ b/SmppServer/appsettings.json
@@ -11,7 +11,7 @@
     "SessionPassword": "test"
   },
   "SslConfiguration": {
-    "Enabled": true,
+    "Enabled": false,
     "Port": 2776,
     "CertificatePath": "/app/certificates/smpp-server.pfx",
     "CertificatePassword": "${SSL_CERTIFICATE_PASSWORD}",
