--- a/SmppServer/appsettings.json
+++ b/SmppServer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "SmppServerConfiguration": {
-    "SessionUsername": "test",
+    "SessionUsername": "smpp-client",
     "SessionPassword": "test"
   },
   "SslConfiguration": {
@@ -49,5 +49,11 @@
       "AllowNameMismatch": false,
       "UseCustomValidation": false
     }
+  },
+  "PostmanApiConfiguration": {
+    "PostmanBaseUrl": "https://test.postman.gov.sg",
+    "SingleSmsUrl": "api/v2/campaigns/{0}/messages",
+    "CampaignId": "",
+    "ApiKey": ""
   }
 }
