added postman testing support

--- a/SmppServer/appsettings.json
+++ b/SmppServer/appsettings.json
@@ -53,7 +53,7 @@
   "PostmanApiConfiguration": {
     "PostmanBaseUrl": "https://test.postman.gov.sg",
     "SingleSmsUrl": "api/v2/campaigns/{0}/messages",
-    "CampaignId": "",
-    "ApiKey": ""
+    "CampaignId": "campaign_68123fe4-2e51-4808-af6f-44034185eb7f",
+    "ApiKey": "key_test_SykV3qltUbsGye5uPl4b479cH23UJKqK"
   }
 }
