added SSL changes

--- a/SmppServer/appsettings.json
+++ b/SmppServer/appsettings.json
@@ -11,10 +11,10 @@
     "SessionPassword": "test"
   },
   "SslConfiguration": {
-    "Enabled": false,
-    "Port": 2776,
-    "CertificatePath": "/app/certificates/smpp-server.pfx",
-    "CertificatePassword": "${SSL_CERTIFICATE_PASSWORD}",
+    "Enabled": true,
+    "Port": 2775,
+    "CertificatePath": "localhost.pem",
+    "CertificatePassword": "",
     "CertificateStoreLocation": "LocalMachine",
     "CertificateStoreName": "My",
     "CertificateSubject": "",
@@ -23,8 +23,7 @@
     "CheckCertificateRevocation": true,
     "AllowSelfSignedCertificates": false,
     "TrustedCACertificates": [
-      "/app/certificates/ca-cert.pem",
-      "/app/certificates/intermediate-ca.pem"
+      "localhost.pem"
     ],
     "HandshakeTimeout": "00:00:30",
     "EnableSessionResumption": true,
@@ -44,7 +43,8 @@
       "ValidateName": true,
       "ExpectedNames": [
         "smpp-server.yourdomain.com",
-        "*.yourdomain.com"
+        "*.yourdomain.com",
+        "localhost"
       ],
       "AllowNameMismatch": false,
       "UseCustomValidation": false
