--- a/SmppServer/Smpp.Server.csproj
+++ b/SmppServer/Smpp.Server.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Identity" Version="1.16.0" />
+        <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.8.0" />
+        <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.8.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
