code sync on 6th Nov

--- a/src/sg.gov.cpf.esvc.smpp.server/appsettings.json
+++ b/src/sg.gov.cpf.esvc.smpp.server/appsettings.json
@@ -33,7 +33,7 @@
     "Port": 2775,
     "SupportedProtocols": 15360,
     "RequireClientCertificate": false,
-    "CheckCertificateRevocation": false,
+    "CheckCertificateRevocation": true,
     "AllowSelfSignedCertificates": true,
     "HandshakeTimeout": "00:00:30",
     "AllowedCipherSuites": [
@@ -50,11 +50,31 @@
   "WhitelistedSmsConfiguration": {
     "IsEnabled": true,
     "WhitelistedMobileNumbers": [
-      "6597472115",
-      "6594651971",
-      "6597243653",
-      "6591706478",
-      "6588362081"
+      {
+        "MobileNumber": "6597472115",
+        "Delay": 120,
+        "IsSentSMS": true
+      },
+      {
+        "MobileNumber": "6594651971",
+        "Delay": 15,
+        "IsSentSMS": false
+      },
+      {
+        "MobileNumber": "6588362081",
+        "Delay": 30,
+        "IsSentSMS": false
+      },
+      {
+        "MobileNumber": "6597243653",
+        "Delay": 45,
+        "IsSentSMS": false
+      },
+      {
+        "MobileNumber": "6591706478",
+        "Delay": 60,
+        "IsSentSMS": false
+      }      
     ]
   },
   "AzureKeyVaultConfiguration": {
