Git Sync on 12th Jan 2026

--- a/src/sg.gov.cpf.esvc.smpp.server/appsettings.json
+++ b/src/sg.gov.cpf.esvc.smpp.server/appsettings.json
@@ -1,15 +1,18 @@
 {
   "Logging": {
+    "LogLevel": {
+      "Default": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning"
+    },
     "Console": {
       "LogLevel": {
-        "Default": "Information"
+        "Default": "Warning"
       }
     },
     "ApplicationInsights": {
       "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Information",
-        "Microsoft.Hosting.Lifetime": "Information"
+        "Default": "Warning"        
       },
       "Console": {
         "DisableColors": false
@@ -45,35 +48,39 @@
     "EnableOcspStapling": false    
   },
   "PostmanApiConfiguration": {
-    "SingleSmsUrl": "api/v2/campaigns/{0}/messages"   
+    "SingleSmsUrl": "api/v2/campaigns/{0}/messages",
+    "RetrieveMessageUrl": "api/v2/campaigns/campaign_68123fe4-2e51-4808-af6f-44034185eb7f/messages/message_68a50a44-c55c-47f3-a6bd-05a985d84756"
   },
   "WhitelistedSmsConfiguration": {
     "IsEnabled": true,
     "WhitelistedMobileNumbers": [
       {
         "MobileNumber": "6597472115",
-        "Delay": 120,
         "IsSentSMS": true
       },
       {
         "MobileNumber": "6594651971",
-        "Delay": 15,
-        "IsSentSMS": false
+        "IsSentSMS": true
       },
       {
         "MobileNumber": "6588362081",
-        "Delay": 30,
-        "IsSentSMS": false
+        "IsSentSMS": true
       },
       {
         "MobileNumber": "6597243653",
-        "Delay": 45,
-        "IsSentSMS": false
+        "IsSentSMS": true
       },
       {
         "MobileNumber": "6591706478",
-        "Delay": 60,
-        "IsSentSMS": false
+        "IsSentSMS": true
+      },
+      {
+        "MobileNumber": "6581019358",
+        "IsSentSMS": true
+      },
+      {
+        "MobileNumber": "6592365182",
+        "IsSentSMS": true
       }      
     ]
   },
