Fixed issues for desktop environment

--- a/test/sg.gov.cpf.esvc.smpp.server.test/sg.gov.cpf.esvc.smpp.server.test.csproj
+++ b/test/sg.gov.cpf.esvc.smpp.server.test/sg.gov.cpf.esvc.smpp.server.test.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>sg.gov.cpf.esvc.smpp.client</RootNamespace>
   </PropertyGroup>
 
 </Project>
